Update kartografer.py script to include possibility to map in CREEDS

--- a/creeds/output/FFS_cluster04_nc/simulation_files/kartograf.ipynb
+++ b/creeds/output/FFS_cluster04_nc/simulation_files/kartograf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -27,19 +27,17 @@
     "from rdkit import Chem\n",
     "\n",
     "mapper = KartografAtomMapper()\n",
+    "for i in range(10):\n",
+    "    print(i)\n",
+    "    ligands = [mol for mol in Chem.SDMolSupplier('Cluster_' + str(i) +'.sdf', removeHs=False)]\n",
+    "    components = [SmallMoleculeComponent(mol) for mol in ligands]\n",
     "\n",
-    "ligands = [mol for mol in Chem.SDMolSupplier('simulation_9.sdf', removeHs=False)]\n",
-    "components = [SmallMoleculeComponent(mol) for mol in ligands]\n",
+    "    mapping = mapper.suggest_multistate_mapping(components, greedy=False, map_hydrogens=False)\n",
     "\n",
-    "print(components)\n",
-    "components = components[0:3]\n",
-    "print(components)\n",
-    "mapping = mapper.suggest_multistate_mapping(components, greedy=False, map_hydrogens=False)\n",
+    "    import json\n",
     "\n",
-    "import json\n",
-    "\n",
-    "with open('mapping.json', 'w') as f:\n",
-    "    json.dump(mapping, f)"
+    "    with open('mapping' + str(i) + '.json', 'w') as f:\n",
+    "        json.dump(mapping, f)"
    ]
   },
   {
